Removed dragdrop and open folder only option.

--- a/src/render/html/index.html
+++ b/src/render/html/index.html
@@ -30,14 +30,14 @@
           src="../assets/upload.svg"
           class="app__uploader__icon-area__icon"
         />
-        <p class="app__uploader__icon-area__text">Drag file(s) to add</p>
+        <!-- <p class="app__uploader__icon-area__text">Drag file(s) to add</p> -->
       </div>
       <div class="app__uploader__button-area">
         <button
           class="app__uploader__button-area__button"
           onclick="openDialog()"
         >
-          Click To Add Files
+          Select Folder to Scan
         </button>
       </div>
     </div>
