Initial implementation of displaying images.

--- a/src/render/html/index.html
+++ b/src/render/html/index.html
@@ -23,6 +23,9 @@
   </head>
 
   <body class="app">
+    <!-- <img src="file:///D:/Users/BJ/Pictures/jbslide/IMG_8130.JPG" /> -->
+    <!-- <img src="file:///D:\Users\\BJ\Pictures\jbslide\IMG_8130.JPG" /> -->
+    <div id="image_container"></div>
     <!-- upload area -->
     <div id="uploader" class="app__uploader">
       <div class="app__uploader__icon-area">
